Modificando la barra de submenu

--- a/index.html
+++ b/index.html
@@ -1,62 +1,79 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <title>Pinterest</title>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link rel="stylesheet" href="assets/icons/icomoon/style.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <header>
-      <nav>
-        <div class="encabezado">
-          <div class="logo">
-            <span >
-              <img class="image-logo" src="assets/images/pinterest.png" alt="pinterest">
-            </span>
-          </div>
-
-          <div class="buscar">
-                <span class="icon-search"></span>
-                <input type="text" placeholder="Escriba aquí">
-                <span class="icon-user"></span>
-                <span class="icon-user"></span>
-          </div>
-          <div class="iconos">
-              <span class="icon-user"></span>
-              <span class="icon-menu"></span>
-              <span class="icon-chat"></span>
-          </div>
-
+      <div class="container">
+        <div class="menu">
+          <span class="logo icon-pinterest"></span>
         </div>
-  <hr>
-        <ul>
-          <li class="font-brown"><a href="#">Cheat Sheet</a></li>
-          <li class="font-brown-light"><a href="#">Tutorial</a></li>
-          <li class="font-brown"><a href="#">Code</a></li>
-          <li class="font-brown-light"><a href="#">Fun</a></li>
-          <li class="font-green"><a href="#">Programming</a></li>
-          <li class="font-brown"><a href="#">Projects</a></li>
-          <li class="font-brown-light"><a href="#">Posts</a></li>
-          <li class="font-brown-light"><a href="#">Medium</a></li>
-          <li class="font-green"><a href="#">Videos</a></li>
-        </ul>
-      </nav>
-    </header>
 
+        <div class="menu menu-center background-gray">
+          <span class="icon-center icon-search background-gray"></span>
+          <input type="text" name="" value="" class="box-text background-gray" placeholder="javascript">
+          <span class="icon-center icon-cancel background-gray"></span>
+          All Pint
+          <span class="icon-center icon-check background-gray"></span>
+        </div>
+
+        <div class="menu menu-right">
+          <span class="icon icon-user color-gray"></span>
+          <span class="icon icon-bubble2 color-gray"></span>
+          <span class="icon icon-menu color-gray"></span>
+        </div>
+
+      </div>
+      <hr>
+
+      <div class="container-1">
+        <ul class="sub-menu">
+          <li><a class="color-brown" href="#">Cheat Sheet</a></li>
+          <li><a href="#">Tutorial</a></li>
+          <li><a href="#">Code</a></li>
+          <li><a href="#">Fun</a></li>
+          <li><a href="#">Programming</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Posts</a></li>
+          <li><a href="#">Medium</a></li>
+          <li><a href="#">Videos</a></li>
+        </ul>
+      </div>
+
+    </header>
     <section>
-      <article class="">
-        <img src="assets/images/Jquery.jpg" alt="Jquery">
-      </article>
-      <article class="">
-        <img src="assets/images/Python.jpg" alt="Python">
-      </article>
-      <article class="">
-        <img src="assets/images/Angular.jpg" alt="Angular">
-      </article>
-      <article class="">
-        <img src="assets/images/ruby.jpg" alt="Ruby">
-      </article>
+      <div class="image-section">
+        <img src="assets/images/python.jpg" alt="Programming java">
+        <h3>Programming</h3>
+        <p class="text-image-section">Why JavaScript is the <br> Future of Programming</p>
+      </div>
+      <div class="image-section">
+        <img src="assets/images/python.jpg" alt="Programming java">
+        <h3>Programming</h3>
+        <p class="text-image-section">Why JavaScript is the <br> Future of Programming</p>
+      </div>
+      <div class="image-section">
+        <img src="assets/images/python.jpg" alt="Programming java">
+        <h3>Programming</h3>
+        <p class="text-image-section">Why JavaScript is the <br> Future of Programming</p>
+      </div>
+      <div class="image-section">
+        <img src="assets/images/python.jpg" alt="Programming java">
+        <h3>Programming</h3>
+        <p class="text-image-section">Why JavaScript is the <br> Future of Programming</p>
+      </div>
+      <div class="image-section">
+        <img src="assets/images/python.jpg" alt="Programming java">
+        <h3>Programming</h3>
+        <p class="text-image-section">Why JavaScript is the <br> Future of Programming</p>
+      </div>
+
     </section>
+
   </body>
 </html>
