Cambiardo el nombre de las imagenes de la secciones

--- a/index.html
+++ b/index.html
@@ -48,27 +48,27 @@
     </header>
     <section>
       <div class="image-section">
-        <img src="assets/images/python.jpg" alt="Programming java">
+        <img src="assets/images/Python.jpg" alt="Programming java">
         <h3>Programming</h3>
         <p class="text-image-section">Why JavaScript is the <br> Future of Programming</p>
       </div>
       <div class="image-section">
-        <img src="assets/images/python.jpg" alt="Programming java">
+        <img src="assets/images/Python.jpg" alt="Programming java">
         <h3>Programming</h3>
         <p class="text-image-section">Why JavaScript is the <br> Future of Programming</p>
       </div>
       <div class="image-section">
-        <img src="assets/images/python.jpg" alt="Programming java">
+        <img src="assets/images/Python.jpg" alt="Programming java">
         <h3>Programming</h3>
         <p class="text-image-section">Why JavaScript is the <br> Future of Programming</p>
       </div>
       <div class="image-section">
-        <img src="assets/images/python.jpg" alt="Programming java">
+        <img src="assets/images/Python.jpg" alt="Programming java">
         <h3>Programming</h3>
         <p class="text-image-section">Why JavaScript is the <br> Future of Programming</p>
       </div>
       <div class="image-section">
-        <img src="assets/images/python.jpg" alt="Programming java">
+        <img src="assets/images/Python.jpg" alt="Programming java">
         <h3>Programming</h3>
         <p class="text-image-section">Why JavaScript is the <br> Future of Programming</p>
       </div>
